# ComfyUI-LayerAnimate

./: LayerAnimate_nodes.py  README.md  __init__.py  pyproject.toml  requirements.txt
LayerAnimate/lvdm/: basics.py  common.py  utils.py
LayerAnimate/lvdm/models/: autoencoder.py  condition.py  controlnet.py  layer_controlnet.py  unet.py
LayerAnimate/lvdm/modules/: ae_dualref_modules.py
LayerAnimate/lvdm/pipelines/: pipeline_animation.py
LayerAnimate/scripts/: animate_Layer.py  demo1.yaml  demo2.yaml  demo3.yaml  demo4.yaml  demo5.yaml
